--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
    <tr height="200px">
       <td>
          <table title="Menu" border="0" width="100px">
-            <tr><td>Menú</td></tr>
-            <tr><td>Vínculo 1 <A HREF="P.PAISES.html"> Clik para ver o preço do PS4 </A></td></tr>
+            <tr><td>Menu</td></tr>
+            <tr><td>Vínculo 1 <A HREF="P.PAISES.html"> Click para ver o preço do PS4 </A></td></tr>
             <tr><td>Vínculo 2</td></tr>
             <tr><td>Vínculo 3</td></tr>
          </table>
@@ -72,7 +72,9 @@
                    <video src="https://us10.proxysite.com/process.php?d=%2BsLd0wFmKDu%2BScjuHPXELwY1JjZWmcYIxCRXYexXxv5orR5Z8tJ5AXVT2gOp9YwVHM8GHhtzCYO7Vpkiv5n%2Fm21%2F%2BxU%2FeG3dXkYy2D%2BK4IqlTSas8RADYiyp%2FxzVK5cEG0SnZEAazDDpYCkuEYtFvsk37kJieHQ%2BQ94JGY%2Bj5JcS1HNDjpSPorKGa0x4KzvouHWcyKbEgg%2FmjuPktuacvjJmp6NyNWqXZ%2B6L4LRtWdkX3hRZMtyCMvZjlH7eVsbYPbIOThot6Ribw9GOAoj1GtGDuCq%2FkjCQsKAHkBRxB6BY8sJNRque5cG%2BWAiFWXKEH7IsrsJtlQdCuJoDKzD7fA8yEjCTTIovH6ViCZE2GUt1hSmzyc1df8GETKfr92XQXUZXm%2FUhRV42WLV24E1RmGlqYOM1ed4SQxv9a%2F1hSTsB6QnOfdO2mjoz0%2Fm%2Fd6gJKFT0ecjywDw4bMAPFOAGcwjShbJMyRzNsXEhp5wbmYcW4iBk8WRL%2BUa7mPYXM83PrMHg64rNvLDRemJ7X7ye3HL4v4kA48MSdO0AZqmobPRT0emC4OM69PzYQDDYeH0slLo3rc50JJtvsjR%2FOjvLl2ZpF5RqgVZ%2BvJKZiiJZ2%2BA3JLy6LZtZMNriio0p5N8W%2Fc9Qgg28TzDHDuP1lJk0X0ldEVMHGwu4ezDqk4eQLzlh6tzSnu3B59j%2FMNvQJGQr%2BBL1MCPbP87Ty0suWsPgNfajQD%2BFS73Fe1AkP5ylFPdPZSc9iM%2Forqi9uKa4CxIUR49ZXxee9JDb2Uf4u46%2B%2F6TTPZrs%2FaI%3D&b=1"
                    controls="button" id="video1" width="600px" height="450px" >
                    </div>
-
+                 <div class="center">
+                   <video src="https://us12.proxysite.com/process.php?d=x5B99FzOUxUflMWSRQLCgtdIYWFOjWR9qcmy1iOPuf3oFGqtJ38zQ29D%2Bxzg1OiMHlOokiI1j%2FIFpn%2BRt97Nq3YzcGf7F5esRsidEWNWeShnm%2FJk0xVmfrsoxIxWjT9endBzKTBn5z3m2ctBVIl4SkZhDvjoBNIztfz7iXUgnhEiLHjLD0Emh37N%2FJbTEni492ZEIH72rQKdJOdcSUiufAE3jS2oNHceEo5E%2FYV1z0Z7LntNCMNFTKKv48dS8iMM7eX5j%2B3gbkw%2BBV2ewkbK%2FfTjvz6%2BuKHxwODfmgUl%2FOVTdivLcenxveIpaoNBzxMvBe6qJIBmskKdffb8LOpfdGFh22yJmfr2Dd7AWfHcy2nVljKRnocxzTt0HKsor5gAPN2atOC9cEvUQm%2FdS%2Bk%2Bqrcjw1YYq8NQYji7Oh9nCDWPEqp5I75PN45mCCEiwD7229YJfonHRaDw%2F2PUSwELzOUhClZwY%2BodtG9H9VZEOb4wVP4ZXwmRUdk0Az8BtV%2FAcdSk2Xtv3JvAKa0KLVH%2FTfnJ22luLJlNV69WM1qHzPUailjA7n02vJ1e5Ygdwh5V7ERn1katne87BIbLntrVi4Hbsa2mfldbbajt32DzpI4a6%2BMYQKRfbrezLLUUzubS4LBz8buMHgDTJyI4srpuv5R6BqJLpBNGGReb33IfQONxwhQIrt2Em3ZM3eNoE%2Bj%2FeMtLMqy71cw08PENqc8T11PCEGnEVdCly4g%2FMhEYGlBwQ1Ose0qiiMvFAih5upz00brzwP%2Bzc4zgEnBcg1fRAm%2F0epjl%2FhU%2BXremb7SQEBmUPc2APQk1T53uL8JiJAMp2IyxjKTIvMTsXVpVSI8uKhCZ9JLEnhy6%2BKzuge%2BMeNva3g%3D%3D&b=1"
+                   controls="button" id="vídeo2" width="600px" height="450px" >
                </div>
 
                <h1> Preços por pais </h1>
