Commit de retorno 03/02/2017

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
    <tr height="200px">
       <td>
          <table title="Menu" border="0" width="100px">
-            <tr><td>Menu</td></tr>
-            <tr><td>Vínculo 1 <A HREF="P.PAISES.html"> Click para ver o preço do PS4 </A></td></tr>
+            <tr><td>Menú</td></tr>
+            <tr><td>Vínculo 1 <A HREF="P.PAISES.html"> Clik para ver o preço do PS4 </A></td></tr>
             <tr><td>Vínculo 2</td></tr>
             <tr><td>Vínculo 3</td></tr>
          </table>
@@ -69,12 +69,10 @@
 
 
                  <div class="center">
-                   <video src=""
+                   <video src="https://us10.proxysite.com/process.php?d=%2BsLd0wFmKDu%2BScjuHPXELwY1JjZWmcYIxCRXYexXxv5orR5Z8tJ5AXVT2gOp9YwVHM8GHhtzCYO7Vpkiv5n%2Fm21%2F%2BxU%2FeG3dXkYy2D%2BK4IqlTSas8RADYiyp%2FxzVK5cEG0SnZEAazDDpYCkuEYtFvsk37kJieHQ%2BQ94JGY%2Bj5JcS1HNDjpSPorKGa0x4KzvouHWcyKbEgg%2FmjuPktuacvjJmp6NyNWqXZ%2B6L4LRtWdkX3hRZMtyCMvZjlH7eVsbYPbIOThot6Ribw9GOAoj1GtGDuCq%2FkjCQsKAHkBRxB6BY8sJNRque5cG%2BWAiFWXKEH7IsrsJtlQdCuJoDKzD7fA8yEjCTTIovH6ViCZE2GUt1hSmzyc1df8GETKfr92XQXUZXm%2FUhRV42WLV24E1RmGlqYOM1ed4SQxv9a%2F1hSTsB6QnOfdO2mjoz0%2Fm%2Fd6gJKFT0ecjywDw4bMAPFOAGcwjShbJMyRzNsXEhp5wbmYcW4iBk8WRL%2BUa7mPYXM83PrMHg64rNvLDRemJ7X7ye3HL4v4kA48MSdO0AZqmobPRT0emC4OM69PzYQDDYeH0slLo3rc50JJtvsjR%2FOjvLl2ZpF5RqgVZ%2BvJKZiiJZ2%2BA3JLy6LZtZMNriio0p5N8W%2Fc9Qgg28TzDHDuP1lJk0X0ldEVMHGwu4ezDqk4eQLzlh6tzSnu3B59j%2FMNvQJGQr%2BBL1MCPbP87Ty0suWsPgNfajQD%2BFS73Fe1AkP5ylFPdPZSc9iM%2Forqi9uKa4CxIUR49ZXxee9JDb2Uf4u46%2B%2F6TTPZrs%2FaI%3D&b=1"
                    controls="button" id="video1" width="600px" height="450px" >
                    </div>
-                 <div class="center">
-                   <video src="https://www.google.com.br/url?sa=t&rct=j&q=&esrc=s&source=video&cd=10&cad=rja&uact=8&ved=0ahUKEwiJhLnSgezPAhWClJAKHQbSCNkQtwIISzAJ&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D9HR7Zo-mX7k&usg=AFQjCNHsR18s_Nlz76jqnvYHxG0dC_H8wA"
-                   controls="button" id="vídeo2" width="600px" height="450px" >
+
                </div>
 
                <h1> Preços por pais </h1>
@@ -210,7 +208,7 @@
   </tr>
 </table>
 
-  <body>
+  <!--<body>
     <div id= "t">
       <h1>SONY MIX</h1>
        <img src="fff.jpg"width="500px" height="400px" id=imagem1 >
@@ -251,7 +249,7 @@
 
 
   <div class="center">
-    <video src="ps4.avi.mp4"
+    <video src="https://us10.proxysite.com/process.php?d=%2BsLd0wFmKDu%2BScjuHPXELwY1JjZWmcYIxCRXYexXxv5orR5Z8tJ5AXVT2gOp9YwVHM8GHhtzCYO7Vpkiv5n%2Fm21%2F%2BxU%2FeG3dXkYy2D%2BK4IqlTSas8RADYiyp%2FxzVK5cEG0SnZEAazDDpYCkuEYtFvsk37kJieHQ%2BQ94JGY%2Bj5JcS1HNDjpSPorKGa0x4KzvouHWcyKbEgg%2FmjuPktuacvjJmp6NyNWqXZ%2B6L4LRtWdkX3hRZMtyCMvZjlH7eVsbYPbIOThot6Ribw9GOAoj1GtGDuCq%2FkjCQsKAHkBRxB6BY8sJNRque5cG%2BWAiFWXKEH7IsrsJtlQdCuJoDKzD7fA8yEjCTTIovH6ViCZE2GUt1hSmzyc1df8GETKfr92XQXUZXm%2FUhRV42WLV24E1RmGlqYOM1ed4SQxv9a%2F1hSTsB6QnOfdO2mjoz0%2Fm%2Fd6gJKFT0ecjywDw4bMAPFOAGcwjShbJMyRzNsXEhp5wbmYcW4iBk8WRL%2BUa7mPYXM83PrMHg64rNvLDRemJ7X7ye3HL4v4kA48MSdO0AZqmobPRT0emC4OM69PzYQDDYeH0slLo3rc50JJtvsjR%2FOjvLl2ZpF5RqgVZ%2BvJKZiiJZ2%2BA3JLy6LZtZMNriio0p5N8W%2Fc9Qgg28TzDHDuP1lJk0X0ldEVMHGwu4ezDqk4eQLzlh6tzSnu3B59j%2FMNvQJGQr%2BBL1MCPbP87Ty0suWsPgNfajQD%2BFS73Fe1AkP5ylFPdPZSc9iM%2Forqi9uKa4CxIUR49ZXxee9JDb2Uf4u46%2B%2F6TTPZrs%2FaI%3D&b=1"
     controls="button" id="video1" width="600px" height="450px" >
     </div>
 
@@ -386,4 +384,4 @@
 
   <div id="myProgress">
   <div id="myBar"></div>
-</div>
+</div>-->
