Commit de exemplo

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                    O modelo lançado inicialmente conta com armazenamento de 500gb, mas posteriormente foi lançada uma versão com 1tb.
                <br></br>
                    Quem adquiriu o modelo antigo e sente a necessidade de aumentar a capacidade de armazenamento pode optar por usar um HD externo.
-                   O console é o sucessor do PS3 <sub>lançado em 2007</sub> com mais cara de computador top de linha que nunca.
+                   O console é o sucessor do PS3 <sub>lançado em 2007</sub> com mais cara de (Ygor mecheu aqui! hahahah) computador top de linha que nunca.
                    O PS4 ficou mais barato ao começar a ser fabricado no Brasil, e pode ser encontrado pelo preço médio de R$ 2.000 <sup> pelo Buscapé.</sup> </p>
 
                   <p> Na <a href="http://store.sony.com.br/playstation/jogos" target="_blank"> Sony Store Online </a> podem se encontrar jogos para todos os gostos </p>
