--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
          <table id="dois" border="0" width="400px">
             <tr>
                <td><div id="conteudo">
+                  <background="f.gamers.png">
                  <p><b><mark>Se você é do tipo que gosta de estar sempre de olho na sua lista de amigos, troféus e atualizações do Playstation,
                    provavelmente vai gostar dessa novidade. A Sony revelou que vai lançar um aplicativo que funcionará como extensão do menu do PS4.</mark></b></p>
 
