--- a/Videogames.html
+++ b/Videogames.html
@@ -34,22 +34,29 @@
 <p> Os video games também podem usar outras maneiras de interagir e prover informação ao jogador. O uso de sons é usado em larga escala desde os primórdios. Outros tipos de resposta, como dispositivos de vibração e sensores de movimento também são bastante utilizados nos video games. O avanço tecnológico tem trazido formas cada vez mais intensas de imersão nos jogos através destes periféricos, como o reconhecimento de movimentos e de voz. </p>
 </div>
 
-<div id="esquerda">
+<table class="table" id="table">
+<tr class="table" > <th class="table" > Consoles </th> <th class="table"> Jogos </th></tr>
+<tr class="table">
+<td class="table">
 <p>Console de videogame (português brasileiro) ou consola de jogos (português europeu) (também chamado no Brasil simplesmente de videogame ou console, e em Portugal de consola) é um microcomputador dedicado a executar jogos de vídeo (videogames) de diversas naturezas ou, como são conhecidos, diversos gêneros, como jogos de tiro, jogos de ação, música e outros. A consola executa um jogo de cada vez, mas que pode ser facilmente intercambiado de acordo com o desejo do usuário.</p>
 
-<p><p>Dentre os apreciadores de videogames na amecs de ambos os sexos e todas as faixas etárias, de crianças a adultos.</p>
+<p>Dentre os apreciadores de videogames na amecs de ambos os sexos e todas as faixas etárias, de crianças a adultos.</p>
 
 <p>Vasta é a biblioteca de títulos e estilos de jogos a disposição dos jogadores, e podem estar gravados em disco de leitura óptica (CD's, DVD's, BD's ou mídia especializada, como no caso do PSP e GameCube), no próprio disco rígido da consola, em cartões de memória ou em cartuchos. Em tais jogos, é possível interagir através de comandos dados por meio de um controle (ou comando), usualmente chamado de joystick. Atualmente também é possível controlar um jogo através de comandos de voz e por gestos, assim como funções básicas do console, como selecionar um jogo da biblioteca, administrar o conteúdo de seu disco rígido, ajustar data e hora, etc. As informações dos jogos são processadas no interior do aparelho e disponibilizadas aos jogadores através de uma interface gráfica e sonora, apresentada em algum dispositivo de áudio e vídeo (televisão, monitor de vídeo, fones de ouvido, etc. por imagens e animação, fala, efeitos sonoros e música) e muitas vezes tátil, através de vibração do controle ou do fone de ouvido.</p>
-</div>
-<div id="Left">
+
+</td>
+<td class="table">
   <p>Para muitos, o primeiro jogo eletrônico da história foi desenvolvido em 1962 por Slug Russel, Wayne Witanen e Martin Graetz, colegas do MIT (Instituto de Tecnologia de Massachusetts), EUA. Com o fim de criar algo útil para as horas vagas, os estudantes idealizaram um jogo de batalha espacial capaz de rodar nos arcaicos computadores DEC PDP-1: o SpaceWar.
 
 No entanto, alguns historiadores dizem que o tataravô dos jogos fora desenvolvido quatro anos antes, em 1958, pelo físico Willy Higinbotham, mais conhecido por ter sido um dos criadores da bomba atômica. Tratava-se de um joguinho de tênis mostrado em um osciloscópio e processado por um computador analógico, uma espécie de atrativo para os visitantes de seu laboratório.
 
 Em 1968 temos um importante capítulo da história do videogame, por meio da figura do alemão erradicado nos Estados Unidos, Ralph Baer. Após ter se formado em engenharia eletrônica e trabalhado em diversas empresas de rádio e TV, Baer teve a brilhante ideia de criar um aparelho capaz de rodar jogos eletrônicos por meio da televisão. Tal fato foi de grande importância para o futuro dos games pelo fato de que, até aquele momento, os jogos só rodavam nos computadores e o acesso aos mesmos era restrito a pequenos grupos de estudantes universitários. O alemão desenvolveu e patenteou um aparelho chamado “Brown Box”, capaz de rodar diferentes tipos de jogos, fato que tornou Ralph Baer no “pai” dos videogames.
 
-O primeiro console comercializado da história foi o Odissey, elaborado pela empresa Magnavox, em 1972, nos Estados Unidos. O aparelho foi vendido no Brasil mais tarde, no final da década de 70. Fabricado pela Philco e Ford, o console ficou conhecido como Telejogo, o qual basicamente consistia em traços que subiam e desciam para rebater um quadrado.  </p>
-</div id>
+O primeiro console comercializado da história foi o Odissey, elaborado pela empresa Magnavox, em 1972, nos Estados Unidos. O aparelho foi vendido no Brasil mais tarde, no final da década de 70. Fabricado pela Philco e Ford, o console ficou conhecido como Telejogo, o qual basicamente consistia em traços que subiam e desciam para rebater um quadrado.
+</p>
+</td>
+</tr>
+
 
 
 
