--- a/Videogames.html
+++ b/Videogames.html
@@ -56,6 +56,19 @@ O primeiro console comercializado da história foi o Odissey, elaborado pela emp
 </p>
 </td>
 </tr>
+</table>
+
+<div id="rodape pr">
+  <div id="rodape1">
+    <h3> Colégio Pedro II - Campus Duque de Caxias</h3>
+    <h5> Introdução a Ciência da Computação </h5>
+    <h4>  Turma:IN102</h4>
+    <h5> Orientador </h5>
+    <h6>  Ygor Canalli </h6>
+   </div>
+  <div id="rodape2"><br></br><br></br><h5> Desenvolvido por </h5> <h6> <ul><li>Maria Jose Villamizar #14</li><li>Emerson Rodrigues Pinto Júnior #21</li>
+  <li>Gabriel Rodrigues Nunes #22</li><li>Patrick</li></ul> </h6> </div>
+</div>
 
 
 
