--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <div id="menu">
     <ul>
-      <li class="item_menu"> <a href="Videogames.html"> Inicio</a> </li>
-      <li class="item_menu"> <a href="">Videojogos</a> </li>
+      <li class="item_menu"> <a href="index.html"> Inicio</a> </li>
+      <li class="item_menu"> <a href="videojogos.html">Videojogos</a> </li>
       <li class="item_menu"> <a href="Console.html">Consoles</a> </li>
     <ul>
   </div>
